# konnekt

./: .gitignore  README.md
Publish/: .gitignore
Publish/___trunk/: .gitignore  install.ini
Publish/___trunk/__add/knotify/: hed-kandi.ini  konnekted people.ini
Publish/___trunk/__add/sms/: jabber.lua  jabber.txt  jabber.xml
Publish/___trunk/__add/sounds/: SummerSun.xml  elektro.xml  speedfreak.xml  tech.xml  time-squad.xml  voyager.xml
Publish/updater/: central.xml  cmdline.php  domxml-php4-to-php5.php
depends/: sigcconfig.h
depends/openssl/: aes.h  engine.h  err.h  evp.h  kssl.h  opensslv.h  pkcs7.h  rsa.h  ssl.h  x509.h  x509_vfy.h
depends/shared_lib/: ButtonX.cpp  ButtonX.h  ColorPicker.cpp  ColorPicker.h  DLGHTML.cpp  DLGHTML.h  DirDialog.cpp  DirDialog.h  FontPicker.cpp  FontPicker.h  ToolTipX.cpp  ToolTipX.h  ToolTipXitems.cpp  callstack.cpp  callstack.h  crc32.cpp  crc32.h  critical_section.cpp  critical_section.h  crypt_func.h  dbtable.h  dtable.cpp  dtablebin.cpp  dtablebin.h  func.cpp  func.h  func_ded.cpp  garbage.cpp  garbage.h  messagebox.cpp  messagebox.h  msc_compat.h  preg.cpp  preg.h  richhtml.cpp  richhtml.h  shared_lib.vcproj  shared_lib_0.6.vcproj  simxml.cpp  simxml.h  (+6 more)
depends/sigc++/: Makefile.am  Makefile.in  README  class_slot.h  connection.cpp  method_slot.h  object_slot.h  retype.h  retype_return.h  signal.h
depends/sigc++/config/: Makefile.am  Makefile.in  sigcconfig.h.in
depends/sigc++/macros/: Makefile.am  Makefile.in  class_slot.h.m4  method_slot.h.m4  object_slot.h.m4  retype.h.m4  retype_return.h.m4  signal.h.m4
depends/w32compat/: stdint.h
depends/w32compat/sys/: ioctl.h  socket.h  wait.h
doc/: Doxyfile  doxygen.css  foot.html  head.html
doc/pages/: doc_changelog.h  doc_devel.h  doc_func.h  doc_main.h
gfx/: logo.ai
publish/: adv_copy.php  all.bat  debug.bat  konnekt.php  prepare.bat  prepare.php  prepare_trunk.bat  prepare_trunk.php  publish.bat  testrelease.php  testsuite.bat  testsuite.php  update.bat  update.php
publish/__trunk/: konnekt.nsi  profile.ini
publish/updater/: kU-Paczka.php  kU-config.inc  kUpdate-SDK.xml  kUpdate-beta.xml  konnekt-actio.last.txt  konnekt-actio.php  konnekt-actio.xml  konnekt-basic.last.txt  konnekt-basic.php  konnekt-basic.xml  konnekt-beta.php  konnekt-beta.xml  konnekt-debug.php  konnekt-dev.last.txt  konnekt-dev.php  konnekt-dev.xml  konnekt-sdk.last.txt  konnekt-sdk.php  konnekt-sdk.xml  konnekt-trunk.last.txt  konnekt-trunk.php  konnekt-trunk.xml  standard.txt  updater.last  updater.php  updater_engine.php  xmllib.php
