
templates	=  bind_return.h.m4  \
	           method_slot.h.m4 \
		  object_slot.h.m4 retype_return.h.m4 slot.h.m4		\
		  bind.h.m4 class_slot.h.m4 hide.h.m4 retype.h.m4	\
		  signal.h.m4 template.macros.m4 

EXTRA_DIST	= README $(templates)

m4includedir		= $(includedir)/sigc++-1.2/sigc++/macros
m4include_HEADERS	= $(templates)

